spacing issue

--- a/src/pages/operator/css/Operator.css
+++ b/src/pages/operator/css/Operator.css
@@ -125,7 +125,7 @@
     row-gap: 10px;
     column-gap: 10px;
     justify-content: center;
-    padding-top: 4px;
+    padding-top: 20px;
     margin-bottom: 20px;
 }
 
